# Siri-billing-app

./: .env  .gitignore  CHANGELOG.md  README.md  VERSION_MANAGEMENT.md  database.schema  middleware.ts  next.config.mjs  package.json  pnpm-lock.yaml  private.key  private.key.pub  siribillingupdater.json  tailwind.config.ts  tsconfig.electron.json  tsconfig.json
backend/: .env  Siribilling-backend-x86_64-pc-windows-msvc.spec  database_schema.md  main.py  pyinstaller.txt  pyproject.toml  requirements.txt  schema.sql  supabase_schema.txt  test_db_connection.py  test_sync_queue.py
backend/auth/: auth.py
backend/background_tasks/: background_tasks.py
backend/config/: config.py
backend/data/: sessions.json
backend/data_access/: data_access.py  mysql_data_access.py  supabase_data_access.py
backend/helpers/: utils.py
backend/instance/: sessions.db
backend/logger/: logger.py
backend/migrations/: 2026_05_17_notifications_add_store_id.sql  2026_06_24_storeinventory_dedupe_unique.sql
backend/notifications/: notifications.py
backend/routes/: auth_routes.py  billing_routes.py  customer_routes.py  discount_otp_routes.py  discount_routes.py  hsn_codes_routes.py  notification_routes.py  product_routes.py  return_order_routes.py  return_routes.py  settings_routes.py  stock_stream_routes.py  store_routes.py  sync_routes.py  user_routes.py
backend/scripts/: recover_offline_bills.py
backend/services/: billing_service.py
backend/session_logging/: session_logging.py
backend/tests/: test_background_tasks.py  test_data_access.py  test_sync_controller.py
lib/: db.ts  (+13 more)
(+133 files in other folders)
