[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask",
    "Flask-Cors",
    "python-dotenv",
    "mysql-connector-python==8.4.0",
    "python-dateutil>=2.9.0.post0",
    "flask-session>=0.8.0",
    "flask-sqlalchemy>=3.1.1",
]
