[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask",
    "Flask-Cors",
    "python-dotenv",
    "mysql-connector-python==8.4.0",
    "python-dateutil>=2.9.0.post0",
    "flask-session>=0.8.0",
    "flask-sqlalchemy>=3.1.1",
    "supabase>=2.24.0",
    "flask-jwt-extended>=4.7.1",
    "bcrypt>=5.0.0",
    "pyinstaller>=6.18.0",
]
